5.10.2
------
1. Re-add 'Compositions' action.
2. Group all non-artist roles under 'Appearances' when listing an artist's
   albums.
3. Use circular images for works-composers as per other artists.
4. Add simple 'e' icon for Ever-Solo players.

5.10.1
------
1. Fix status icon colours in expanded now-playing when using coloured toolbars
   with light themes.
2. Fix listing of services when no artist items have been favourited.
3. Re-add 'Appearances' in artist's release lists.
4. Sort search track results by title.
5. Fix shortcuts in navigation drawer for players that cannot power off.
6. Fix show all values for roles in MAI track view.

5.10.0
------
 1. Only show 'roles' in '...' menu, not as categories in browse list.
 2. Only cache artists and albums lists if using default library view.
 3. Fix resetting some colour variables when changing colour setting from 'From
    current cover'
 4. Change list/grid toggle icon to match LMS9.1's
 5. Allow 'Compilations' entry to be pinned, but map artist_id to LMS's current
    ID when listing.
 6. Fix compilation tracks in 'All tracks' when called from release-type
    header.
 7. Fix 'More...', and other actions, when browsing into other roles.
 8. Combine 'Apps' and 'Radio' Perl side, to fix errors when no radio items.
 9. In queue menu if item is part of an album, or multi-disc, then use sub-menu
    for remove actions.
10. Move browse sort selection into dialog, to match queue sorting.
11. Add action to remove artist from queue.
12. When embed iframe only copy CSS variables if this is a LMS page.
13. Show total playlists, works, and labels, if supported in LMS's
    serverstatus.
14. Add initial support for 'Record Labels' browse mode.
15. Use URL as provided in 'updateinfo.json' for update info page.
16. If clock screensaver is closed due to playback being started then switch
    to now-playing view.
17. Add overwrite confirmation when saving queue to an existing, but
    different, name.